md responsive added

--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/_variables.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/_variables.scss
@@ -41,6 +41,9 @@ $default-count-col: 12;
 
 $default-width: 1320px;
 
+$nav-height-desktop: 84px;
+$nav-height-md: 136px;
+
 $breack-points: (
     "lg": 1360px,
     "md": 1024px,
