--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_hero-block.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_hero-block.scss
@@ -8,7 +8,11 @@
 .hero-block {
     background-image: url(../../images/header-background.png);
     background-size: cover;
-    height: calc(100vh - 84px);
+    height: calc(100vh - $nav-height-desktop);
+
+    @include media(md) {
+        height: calc(100vh - $nav-height-md);
+    }
 
     &__title {
         text-align: center;
@@ -30,6 +34,10 @@
 
     &__search {
         margin-top: 48px;
+    }
+
+    &__scroll-down {
+        flex: 1;
     }
 }
 
@@ -92,15 +100,17 @@
     }
 }
 
-.hero-block {
-    &___scroll-down {}
-}
 
 .scroll-down {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 210px;
+    // margin-top: 210px;
+
+
+    &__link {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-decoration: none;
+    }
 
     &__title {
         font-size: 14px;
