--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_mounain-spain.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_mounain-spain.scss
@@ -2,18 +2,22 @@
     background-image: url(../../images/sea-mountains.png);
     background-size: cover;
 
-    &__ms-item {
-        box-sizing: border-box;
-        margin: 220px 0 120px 0;
-        padding: 44px 32px;
-        max-width: 648px;
-        width: 100%;
-        max-height: 344px;
-    }
-
     &__wrapper {
         display: flex;
         justify-content: flex-end;
+    }
+
+    &__ms-item {
+        box-sizing: border-box;
+        margin: 205px 0 105px 0;
+        padding: 44px 32px;
+        max-width: 648px;
+        width: 100%;
+
+        @include media(md) {
+            max-width: 100%;
+            margin: 105px 0;
+        }
     }
 }
 
