--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_what-say.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_what-say.scss
@@ -5,12 +5,26 @@ $text-wrapper-height: auto;
     background-size: cover;
     padding-bottom: 180px;
 
+    @include media(md) {
+        padding-bottom: 105px;
+    }
+
     & .col-4 {
         padding-right: 0;
+
+        @include media(md) {
+            padding-right: $container-padding;
+            padding-bottom: 0;
+        }
     }
 
     & .col-8 {
         padding-left: 0;
+
+        @include media(md) {
+            padding-left: $container-padding;
+            padding-top: 0;
+        }
     }
 
     &__title {
@@ -22,10 +36,14 @@ $text-wrapper-height: auto;
         line-height: 40px;
         text-transform: capitalize;
         margin: 0;
-        padding-bottom: 60px;
+        padding: 105px 0 45px;
+
+        @include media(md) {
+            padding-top: 45px;
+        }
     }
 
-    .gtr {
+    &__img-wrapper {
         display: flex;
         align-items: stretch;
     }
@@ -34,6 +52,11 @@ $text-wrapper-height: auto;
         object-fit: cover;
         width: 100%;
         height: 100%;
+
+        @include media(md) {
+            max-height: 336px;
+            // object-position: top;
+        }
     }
 
     &__wrapper {
@@ -71,6 +94,6 @@ $text-wrapper-height: auto;
         line-height: 28px;
         letter-spacing: 1.6px;
         margin: 0;
-        padding-right: 60px;
+        // padding-right: 60px;
     }
 }
