--- a/students/umienchuk_oksana/exams_first/src/css/form-search/_form-search.scss
+++ b/students/umienchuk_oksana/exams_first/src/css/form-search/_form-search.scss
@@ -1,12 +1,12 @@
 .search-form {
-
+    min-width: 647px;
     // .search-form__wrapper
 
     &__wrapper {
         margin: 0 auto;
         display: flex;
         flex-wrap: nowrap;
-        width: 647px;
+
         align-items: center;
         background-color: $color-white;
         justify-content: space-between;
@@ -41,7 +41,6 @@
         display: flex;
         align-items: center;
         gap: 12px;
-        flex-shrink: 0;
         cursor: pointer
     }
 }
