--- a/students/umienchuk_oksana/exams_first/src/css/review/_review.scss
+++ b/students/umienchuk_oksana/exams_first/src/css/review/_review.scss
@@ -14,11 +14,7 @@
 }
 
 .reviews-title {
-    font-family: $default-font-sub-font;
-    font-size: $font-size-h2;
-    font-weight: 400;
-    line-height: 40px;
-    text-transform: capitalize;
+    @include fonts-type($default-font-sub-font, $font-size-h2, $font-weight-name, $line-height-h, normal, $text-transform-capit);
 }
 
 .reviews-wrap {
@@ -29,22 +25,21 @@
 
     // .reviews-wrap__img
 
-    &__img {}
+    &__img {
+        object-fit: contain;
+        object-position: center;
+    }
 
     // .reviews-wrap__block
 
     &__block {
-
         padding: 48px 60px;
     }
 
     // .reviews-wrap__title
 
     &__title {
-        font-size: $font-size-h5;
-        font-weight: 400;
-        line-height: 28px;
-        text-transform: uppercase;
+        @include fonts-type($default-font-name, $font-size-h5, $font-weight-name, $line-height-text, normal, $text-transform-upper);
         margin: 0 0 16px 0;
     }
 
