--- a/students/hridina_anastasiia/Exam_project_1/src/css/header/_header.scss
+++ b/students/hridina_anastasiia/Exam_project_1/src/css/header/_header.scss
@@ -3,6 +3,14 @@
     background-position: top;
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
+    padding: 0;
+    width: 100dvw;
+    height: 100dvh;
+
+    @include media(md) {
+        height: 100dvh;
+    }
 
     // .header__title
 
@@ -19,13 +27,22 @@
         flex-wrap: nowrap;
         align-items: center;
         padding-top: 20px;
+        position: relative;
+
+        @include media(md) {
+            margin: 0 auto;
+        }
+
+        @include media(sm) {
+            margin: 0 auto;
+        }
     }
 
     // .header__input
 
     &__input {
         padding: 14px 16px;
-        min-width: 30%;
+        min-width: 41%;
         font-size: 14px;
         line-height: 20px;
         letter-spacing: 2.8px;
@@ -35,6 +52,21 @@
 
         &:focus {
             outline: none;
+        }
+
+        @include media(md) {
+            min-width: 45%;
+            font-size: 12px;
+            letter-spacing: 1.1px;
+        }
+
+        @include media(sm) {
+            letter-spacing: 1px;
+            font-size: 11px;
+        }
+
+        @include media(xs) {
+            font-size: 0;
         }
     }
 
@@ -48,12 +80,26 @@
         color: $white-color;
         padding: 10px 24px;
         background-color: $dodgerblue-color;
-        border: 4px solid $white-color;
+        border: none;
         cursor: pointer;
+        position: absolute;
+        right: 30%;
 
         &:hover {
             background-color: $color-azureradiance;
         }
+
+        @include media(md) {
+            right: 28%;
+            padding: 10px 16px;
+        }
+
+        @include media(sm) {
+            font-size: 0;
+            background-color: transparent;
+            padding: 0;
+        }
+
     }
 
     // .header__svg
@@ -61,16 +107,34 @@
     &__svg {
         width: 16px;
         height: 16px;
+
+        @include media(sm) {
+            width: 26px;
+            height: 26px;
+        }
+
+        &_search {
+            @include media(sm) {
+                fill: $dodgerblue-color;
+            }
+        }
     }
 
     // .header__bottom
 
     &__bottom {
+        width: 100%;
+        height: 13%;
+        box-sizing: border-box;
         background-color: $dodgerblue-color;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 20px 50px;
+        position: absolute;
+        bottom: 0;
+        padding-left: 15px;
+
+        @include media(md) {}
     }
 }
 
@@ -98,6 +162,7 @@
         @include new-font(24px, 700, normal, 28px, 2.4px);
         text-transform: uppercase;
         color: $white-color;
+        margin-left: 10px;
     }
 }
 
@@ -133,15 +198,14 @@
     }
 }
 
-.menu-wrapper {}
-
 .menu {
     list-style-type: none;
     display: inline-flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 40px;
+    gap: 30px;
+    margin-right: 30px;
 
     // .menu__wrapper-item
 
