--- a/students/savchak_marharyta/10_block_model/novik/css/style.css
+++ b/students/savchak_marharyta/10_block_model/novik/css/style.css
@@ -12,30 +12,46 @@
 
 body {
     font-family: Open Sans, Arial, Helvetica, sans-serif;
-    font-size: 18px;
+    font-size: 15px;
+    max-width: 1150px;
+    margin: 0 auto;
 }
 
 .nav {
     text-align: center;
 }
 
+
 section {
-    max-width: 100%;
-    margin-bottom: 100px;
-
+    max-width: 777px;
+    margin: 0 auto;
 }
 
+.header {
+    max-width: 777px;
+    margin: 0 auto;
+}
 
-.devider {
+.section-container {
+    padding: 71px 0;
+}
+
+.container {
     border-bottom: 1px solid #070707;
+
 }
 
+.menu {
+    padding: 0;
+}
 
 .menu__item {
     list-style-type: none;
     display: block;
     margin: 0 auto;
-
+    display: inline-block;
+    padding: 2px 14px;
+    letter-spacing: 0.36px;
 
 }
 
@@ -50,7 +66,29 @@ section {
     color: #070707;
 }
 
+.aboutme {
+    max-width: 100%;
+    background-color: #F6F6F6;
+}
 
+.aboutme__title {
+    padding-bottom: 39px;
+}
+
+.aboutme__text {
+    margin: 0;
+}
+
+.aboutme__text:not(:last-of-type) {
+    padding-bottom: 29px;
+}
+
+
+.portfolio__link {
+    display: block;
+    text-align: center;
+    color: #070707;
+}
 
 p {
     text-align: center;
@@ -62,24 +100,29 @@ p {
 }
 
 
-
 .heroblock__title {
-    font-size: 47px;
+    font-size: 40px;
     font-weight: 700;
-    display: inline-block;
-    box-sizing: border-box;
+    margin: 12px 0;
+
 }
 
 h2 {
+    font-size: 28px;
     text-align: center;
+    margin: 0;
+
 }
 
-.heroblock__img,
-.portfolio__img {
-    max-width: 100%;
-    display: block;
-    margin: 0 auto;
+.skills__title {
+    padding-bottom: 0;
 }
+
+
+.heroblock__img {
+    padding-top: 27px;
+}
+
 
 .footer__button {
     border-radius: 22px;
@@ -93,6 +136,98 @@ h2 {
     margin: 0 auto;
 }
 
-footer {
+img {
+    max-width: 100%;
+}
+
+.skills__text {
+    margin-bottom: 40px;
+}
+
+.skills__list_item {
+    float: left;
+}
+
+.skills__list_item:not(:last-of-type) {
+    padding-right: 90px;
+}
+
+.skills__list {
+    padding: 0;
+}
+
+.skills__list::after {
+    content: '';
+    display: block;
+    clear: both;
+}
+
+
+
+.skill-show__img {
+    height: 65px;
+    display: block;
+    margin: 0 auto;
+    padding-bottom: 20px;
+}
+
+.skill-show {
     margin: 0 auto;
 }
+
+.skill-show__caption {
+    text-align: center;
+    font-size: 12px;
+    color: #828282;
+    font-weight: 700;
+    padding-bottom: 45px;
+    height: 32px;
+}
+
+
+
+.portfolio {
+    max-width: 100%;
+    background-color: #F6F6F6;
+    margin: 0 auto;
+}
+
+.portfolio__item {
+    max-width: 777px;
+    margin: 0 auto;
+
+}
+
+.portfolio__img {
+    max-width: 100%;
+    display: block;
+    box-sizing: border-box;
+    padding: 40px 0;
+}
+
+.portfolio__img :first-of-type {
+    padding-top: 0;
+}
+
+.footer__button {
+    margin-top: 50px;
+}
+
+.contacts {
+    margin: 0 auto;
+}
+
+/* .contacts::after {
+    content: '';
+    display: block;
+    clear: both;
+} */
+
+.contacts__item {
+    display: inline-block;
+    padding-right: 15px;
+    height: 10px;
+
+}
+
+.contacts__img {}
