--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_house-spain.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_house-spain.scss
@@ -1,6 +1,7 @@
 .house-spain {
     background-image: url(../../images/house-spain.png);
     background-size: cover;
+    background-position: center center;
 
     &__wrapper {
         max-width: 648px;
