--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_mounain-spain.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_mounain-spain.scss
@@ -1,6 +1,7 @@
 .mount-spain {
     background-image: url(../../images/sea-mountains.png);
     background-size: cover;
+    background-position: center center;
 
     &__wrapper {
         display: flex;
