--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_why-choose.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_why-choose.scss
@@ -68,9 +68,6 @@
 
     &__image-container {
         position: relative;
-        width: 350px;
-        height: 220px;
-        overflow: hidden;
 
         &:first-child {
             margin-right: 70px;
@@ -85,17 +82,9 @@
         }
     }
 
-    &__img-top {
+    &__img {
         max-width: 100%;
         max-height: 100%;
-        object-fit: cover;
-        display: block;
-    }
-
-    &__img-bottom {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
         display: block;
     }
 }
