--- a/students/savchak_marharyta/10_block_model/novik/css/style.css
+++ b/students/savchak_marharyta/10_block_model/novik/css/style.css
@@ -47,7 +47,6 @@ section {
 
 .menu__item {
     list-style-type: none;
-    display: block;
     margin: 0 auto;
     display: inline-block;
     padding: 2px 14px;
@@ -215,6 +214,7 @@ img {
 
 .contacts {
     margin: 0 auto;
+    max-width: 240px;
 }
 
 /* .contacts::after {
@@ -224,10 +224,9 @@ img {
 } */
 
 .contacts__item {
+    margin: 0 auto;
     display: inline-block;
-    padding-right: 15px;
-    height: 10px;
+    width: 25%;
+    box-sizing: border-box;
 
 }
-
-.contacts__img {}
