--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_hero-block.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_hero-block.scss
@@ -15,6 +15,10 @@
         height: calc(100vh - $nav-height-md);
     }
 
+    @include media(sm) {
+        height: calc(100vh - $nav-height-desktop);
+    }
+
     &__title {
         text-align: center;
         margin: 0;
@@ -60,17 +64,14 @@
     width: 100%;
 
     &__input {
-        // max-width: 647px;
+        max-width: 647px;
         width: 100%;
-        // width: 647px;
-        // box-sizing: border-box;
         height: 60px;
         padding: 0;
         font-family: $main-font;
         font-size: 14px;
         line-height: 20px;
         letter-spacing: 2.8px;
-        // padding-left: 36px;
         border: none;
 
         &::placeholder {
@@ -89,11 +90,16 @@
         width: 140px;
         height: 52px;
         top: 4px;
-        right: 5px;
+        right: 6px;
         border: none;
 
         &:hover {
             background-color: $color-blue;
+        }
+
+        @include media(xxs) {
+            position: relative;
+            margin: 20px auto;
         }
     }
 
@@ -116,9 +122,7 @@
 
 
 .scroll-down {
-    // margin-top: 210px;
     display: flex;
-
 
     &__link {
         display: flex;
@@ -127,6 +131,19 @@
         justify-content: flex-end;
         text-decoration: none;
         margin-bottom: 105px;
+        animation: moveUpDown 2.5s ease-in-out infinite;
+
+        @keyframes moveUpDown {
+
+            0%,
+            100% {
+                transform: translateY(0);
+            }
+
+            50% {
+                transform: translateY(30px);
+            }
+        }
     }
 
     &__title {
