--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_menu.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_menu.scss
@@ -5,6 +5,10 @@
     @include media(md) {
         height: $nav-height-md;
     }
+
+    @include media(sm) {
+        height: $nav-height-desktop;
+    }
 }
 
 .logo-wrapper {
@@ -29,22 +33,58 @@
     letter-spacing: 2.4px;
     text-transform: uppercase;
     margin: 0;
-
-
 }
 
-.menu-wrapper {
-    &__item {
-        display: flex;
-        justify-content: space-evenly;
+.col-sm-12 {
+    @include media(sm) {
+        padding: 0;
     }
 }
 
+.menu-wrapper {
+    position: relative;
+
+    &__item {
+        @include media(sm) {
+            position: relative;
+            width: 100%;
+            padding: 0;
+            left: 0;
+            top: -5px;
+            background-color: $color-blue-accent;
+            transform: translateX(-100%);
+            transition: transform .3s ease-in-out;
+            padding: 15px 0;
+            z-index: 2;
+        }
+
+        .menu-open-input:checked~& {
+            transform: translateX(0);
+        }
+    }
+}
+
+.menu-open-input {
+    @include visuality-hidden;
+}
+
 .menu {
+    display: flex;
+    justify-content: space-evenly;
     align-items: center;
     list-style: none;
 
-    &__item {}
+    @include media(sm) {
+        position: absolute;
+        display: block;
+        text-align: center;
+    }
+
+    &__item {
+        @include media(sm) {
+            padding: 12px 0;
+        }
+    }
 
     &__link {
         color: $color-white;
@@ -62,6 +102,71 @@
         &:hover {
             border: 1px solid $color-white;
             border-radius: 15px;
+        }
+    }
+}
+
+.menu-open-input {
+    @include visuality-hidden;
+}
+
+.menu-open-label {
+    @include media(sm) {
+        width: 40px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-right: 18px;
+        position: absolute;
+        top: -50px;
+        right: 0;
+
+        .menu-open-input:checked+& {
+            .menu-open-label__line {
+                background-color: transparent;
+
+                &::before {
+                    top: 0;
+                    transform: rotate(45deg);
+                }
+
+                &::after {
+                    bottom: 0;
+                    transform: rotate(-45deg);
+                }
+            }
+        }
+
+        &__line {
+            position: relative;
+            display: block;
+            width: 70%;
+            background-color: $color-white;
+            height: 2px;
+            border-radius: 0px;
+            border-color: $border-btn-color-primary;
+            transition: background-color .3s ease-in-out;
+
+            &::before,
+            &::after {
+                content: "";
+                display: block;
+                width: 100%;
+                height: 100%;
+                background-color: $color-white;
+                border-radius: inherit;
+                position: absolute;
+                transition: all .3s ease-in-out;
+            }
+
+            &::before {
+                top: -9px;
+            }
+
+            &::after {
+                bottom: -9px;
+            }
         }
     }
 }
