--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_hero-block.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_hero-block.scss
@@ -6,7 +6,7 @@
 }
 
 .hero-block {
-    background-image: url(../../images/header-background.png);
+    background-image: url(../images/header-background.png);
     background-size: cover;
     height: calc(100vh - $nav-height-desktop);
     background-position: center center;
