--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_mounain-spain.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_mounain-spain.scss
@@ -1,5 +1,5 @@
 .mount-spain {
-    background-image: url(../../images/sea-mountains.png);
+    background-image: url(../images/sea-mountains.png);
     background-size: cover;
     background-position: center center;
 
