--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_what-say.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_what-say.scss
@@ -1,7 +1,7 @@
 $text-wrapper-height: auto;
 
 .what-say {
-    background-image: url(../../images/tourist-bg.png);
+    background-image: url(../images/tourist-bg.png);
     background-size: cover;
     padding-bottom: 180px;
 
