--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_buttons.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_buttons.scss
@@ -6,7 +6,7 @@
     height: 60px;
 
     border: $default-border;
-    background-image: url(../../images/rectangle.svg);
+    background-image: url(../images/rectangle.svg);
     background-repeat: no-repeat;
     text-transform: uppercase;
     background-color: $color-blue-accent;
