add header and whyus section

--- a/students/linov_mykhailo/exam_one/src/css/_global.scss
+++ b/students/linov_mykhailo/exam_one/src/css/_global.scss
@@ -1,7 +1,5 @@
 body {
-    font-family: $main-font;
-    background-color: $default-body-color;
-    font-size: $default-font-size;
+    @include font-family(400, 16px, $default-font-color, 28px, $main-font, normal);
 }
 
 @include grid();
