--- a/students/linov_mykhailo/exam_one/src/css/_variables.scss
+++ b/students/linov_mykhailo/exam_one/src/css/_variables.scss
@@ -1,28 +1,25 @@
 // colors
-$orang-color: #f76707;
 $white-color: #fff;
-$gray-3-color: #dee2e6;
-$gray-6-color: #868e96;
-$grey-7-color: #495057;
-$gray-8-color: #343a40;
-$grey-light: lightgray;
-$green-color: green;
-$periwinkle-gray: #BCD0E5;
+$violet-color: #5373FD;
+$darker-violet-color: #486BFE;
+$grey-color: #999;
 
-$border-btn-color-primary: $orang-color;
-$border-btn-color-secondary: $periwinkle-gray;
-$border-height: 50px;
-$btn-font-weight: 600;
+$border-btn-color: $violet-color;
+$btn-color: $violet-color;
 
-$border-color: $grey-light;
-$default-border: 1px solid $grey-light;
+$border-color: $violet-color;
+$default-border: 1px solid $violet-color;
 
 $default-body-color: $white-color;
 
 // fonts
-$default-font-name: 'Roboto';
+$default-font-name: 'Josefin Sans';
 $fallback: Arial, Helvetica, sans-serif;
-$default-font-size: 18px;
+$default-font-size: 16px;
+$default-font-color: $white-color;
+
+$sub-font-name: 'Aleo';
+$sub-font: $sub-font-name, $fallback;
 
 $main-font: $default-font-name, $fallback;
 $font-path: './fonts/';
@@ -34,7 +31,7 @@ $container-max-width: 1200px;
 $gap: 15px;
 $default-count-col: 12;
 
-$default-width: 1200px;
+$default-width: 1320px;
 
 $breack-points: (
     "lg": 1200px,
