--- a/students/linov_mykhailo/exam_one/src/css/_fonts.scss
+++ b/students/linov_mykhailo/exam_one/src/css/_fonts.scss
@@ -1,2 +1,4 @@
-@include font-face('roboto-v30-latin-regular');
-@include font-face('roboto-v30-latin-regular', $_font-style: italic);
+@include font-face('josefin-sans-v32-latin-300', 300);
+@include font-face('josefin-sans-v32-latin-700', 700);
+@include font-face('josefin-sans-v32-latin-regular');
+@include font-face('aleo-v14-latin-regular', 400, normal, $sub-font-name);
